--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,14 @@ jobs:
     #  uses: motrixapp/action-electron-builder@v2
     #  with:
     #    build_script_name: 'build:github'
+
+    #- name: Compile Electron App
+    #  uses: x6Pnda/action-electron-compiler@v1
+    #  with:
+    #      # Package manager. NPM, PNPM and Yarn supported. Install Yarn and PNPM yourself. Default is NPM
+    #      # (Optional)
+    #      package_manager: NPM
+
     - name: install node tools
       run: npm install --global --production windows-build-tools@4.0.0
     - name: install node-gyp
@@ -53,7 +61,7 @@ jobs:
       env:
         ELECTRON: true
         APP_VERSION_NUMBER: 0.5.9
-      run: dir env:
+      run: dir "env:"
     - name: Build on Windows
       env:
         ELECTRON: true
